log
Fri 15 Sep 2023 05:13:49 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: expected ‘,’ or ‘;’ before ‘if’
   42 |     if (map != NULL) {
      |     ^~
treemap.c:47:8: error: ‘TreeMap’ has no member named ‘size’
   47 |     map->size = 0;
      |        ^~
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:25: error: expected ‘;’ before ‘return’
   48 |     map->lower_than = lt
      |                         ^
      |                         ;
   49 | 
   50 |     return NULL;
      |     ~~~~~~               
treemap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c69fba
